--- a/android/assets/jsons/translations/Croatian.properties
+++ b/android/assets/jsons/translations/Croatian.properties
@@ -3,13 +3,13 @@
 # Equivalent of a space in your language
 # If your language doesn't use spaces, just add "" as a translation, otherwise " "
  # Requires translation!
-" " = 
+" " = " "
 
 # If the first word in a sentence starts with a capital in your language, 
 # put the english word 'true' behind the '=', otherwise 'false'.
 # Don't translate these words to your language, only put 'true' or 'false'.
  # Requires translation!
-StartWithCapitalLetter = 
+StartWithCapitalLetter = true
 
 
 # Fastlane
@@ -18,7 +18,7 @@ StartWithCapitalLetter =
 # Documentation: https://f-droid.org/en/docs/Build_Metadata_Reference/#Summary
 # English to translate: https://github.com/yairm210/Unciv/blob/master/fastlane/metadata/android/en-US/short_description.txt
  # Requires translation!
-Fastlane_short_description = 
+Fastlane_short_description =
 
 # Documentation: https://f-droid.org/en/docs/Build_Metadata_Reference/#Description
 # English to translate: https://github.com/yairm210/Unciv/blob/master/fastlane/metadata/android/en-US/full_description.txt
@@ -31,18 +31,18 @@ Fastlane_full_description =
 
 # General
  # Requires translation!
-Delete = 
+Delete = Izbriši
 
 # Base ruleset names
  # Requires translation!
-Civ V - Vanilla = 
+Civ V - Vanilla = Civ V - Vanilla
  # Requires translation!
-Civ V - Gods & Kings = 
+Civ V - Gods & Kings = Civ V - Bogovi i kraljevi
 
 # Tutorial tasks
 
  # Requires translation!
-Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = 
+Move a unit!\nClick on a unit > Click on a destination > Click the arrow popup = Pomakni jedinicu!\nKlikni na jedinicu > Izaberi odredište > Klikni na popup strelicu
  # Requires translation!
 Found a city!\nSelect the Settler (flag unit) > Click on 'Found city' (bottom-left corner) = 
  # Requires translation!
